internal-multi-cluster-gateway/v1alpha1/i-mc-gateway.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: internal-multi-cluster-gateway
spec:
  gatewayClassName: gke-l7-rilb-mc
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            gateway: internal-multi-cluster-gateway
  addresses:
    - type: NamedAddress
      value: i-mc-gw-ip
